<resources>
    <string name="app_name">Workout</string>

    <!-- Action bar items -->
    <string name="action_settings">Settings</string>

    <!-- Action bar titles -->
    <string name="title_new_profile">New Profile</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_stopwatch_times">Stopwatch Times</string>
    <string name="title_graph">Graph</string>

    <!-- Navigation drawer -->
    <string name="navigation_item_countdown">Countdown</string>
    <string name="navigation_item_countdown_profiles">Countdown Profiles</string>
    <string name="navigation_item_stopwatch">Stopwatch</string>
    <string name="navigation_item_stopwatch_categories">Stopwatch Categories</string>

    <string-array name="navigation_drawer_items">
        <item>@string/navigation_item_countdown</item>
        <item>@string/navigation_item_countdown_profiles</item>
        <item>@string/navigation_item_stopwatch</item>
        <item>@string/navigation_item_stopwatch_categories</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Buttons -->
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_pause">Pause</string>
    <string name="button_resume">Resume</string>
    <string name="button_save">Save</string>
    <string name="button_reset">Reset</string>

    <!-- Timer fragment -->
    <string name="profile_spinner_default_text">No profile selected</string>
    <string name="round_number_default_text">Round 0 of 0</string>

    <!-- Stopwatch fragment -->
    <string name="category_spinner_default_text">No category selected</string>

    <!-- Profile activity -->
    <string name="profile_name">Enter a name</string>

    <!-- Misc -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="new_profile">New Profile</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="view_times">View Times</string>
    <string name="view_graph">View Graph</string>
</resources>